update - api doc
